# pytest-sqlalchemy-cockroachdb

./: .env.example  Dockerfile  README.md  docker-compose.yaml  envoy.yml  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: build-push-oci.yaml
hack/: run-lab.sh
src/fakenamesservice/: config.py  data_loader.py  logging.py  telemetry.py
src/fakenamesservice/tests/: conftest.py
src/fakenamesservice/tests/integration/: test_model.py
src/fakenamesservice/tests/unit/: test_models.py
tests/integration/: test_model.py
