# Docs https://packaging.python.org/en/latest/tutorials/packaging-projects/
[metadata]
name = webdemo-dataset
version = file: VERSION
description = Python module to demonstrate dataset import
long_description = file: README.md
license = MIT
url = https://github.com/testruction/pytest-sqlalchemy-cockroachdb
author = Florian JUDITH
author_email = florian.judith.b@gmail.com
keywords =
    service
    api
    aws
    cockroachdb
    postgres

classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent


[options]
python_requires = >=3.8

install_requires =
    psycopg2-binary==2.9.7
    sqlalchemy-cockroachdb==2.0.1
    pydantic
    opentelemetry-exporter-otlp
    opentelemetry-instrumentation-psycopg2
    opentelemetry-instrumentation-logging
    opentelemetry-instrumentation-sqlalchemy


[options.extras_require]
dev =
    build
    cryptography

tests =
    pytest
    pytest-dotenv
    python-dotenv
    httpx


[options.package_data]
* = VERSION, README.md


[options.entry_points]
console_scripts =
    backendservice = backendservice:app


[flake8]
ignore = E501